@@ -4,6 +4,8 @@ KalibroProcessor is the processing web service for Mezuro.
 
 == Unreleased
 
+* Insert in one query all aggregated MetricResults
+* Aggregate values by tree levels
 * Enable ModuleResult tree walking by level
 * Transform TreeMetricResult#descendant_values into a single query for performance
 * Fix possible inconsistency in module result creation (lack of transaction)
